# bevy_webview_projects

./: CLAUDE.md  Cargo.toml  README.MD
.github/workflows/: ci.yml
crates/bevy_flurx_api/: CHANGELOG.md  Cargo.toml
crates/bevy_flurx_api/src/: app.rs  clipboard.rs  dialog.rs  error.rs  fs.rs  http.rs  lib.rs  log.rs  monitor.rs  notification.rs  os.rs  path.rs  web_window.rs
crates/bevy_flurx_api/src/dialog/: open.rs  save.rs
crates/bevy_flurx_api/src/fs/: copy_file.rs  create_dir.rs  exists.rs  read_dir.rs  read_file.rs  remove_dir.rs  remove_file.rs  rename_file.rs  write_file.rs
crates/bevy_flurx_api/src/monitor/: availables.rs  current.rs  primary.rs
crates/bevy_flurx_api/src/os/: family.rs  host_name.rs  kernel_version.rs  locale.rs  os_version.rs  system_name.rs
crates/bevy_flurx_api/src/web_window/: center.rs  create.rs  focus.rs  hide.rs  inner_position.rs  inner_size.rs  is_decorated.rs  is_focused.rs  is_fullscreen.rs  is_maximizable.rs  is_maximized.rs  is_minimizable.rs  is_minimized.rs  is_resizable.rs  is_visible.rs  maximize.rs  minimize.rs  outer_position.rs  set_cursor_hit_test.rs  set_decorations.rs  set_position.rs  set_window_mode.rs  show.rs  title.rs  un_focus.rs  un_maximize.rs  un_minimize.rs
crates/bevy_flurx_ipc/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_flurx_ipc/examples/: simple.rs
crates/bevy_flurx_ipc/src/: component.rs  ipc_commands.rs  ipc_events.rs  ipc_trigger.rs  lib.rs
crates/bevy_flurx_ipc/tests/: index.rs  test01_action_command.rs  test02_async_command.rs  test03_custom_id.rs  test04_return_result.rs
crates/bevy_flurx_ipc_macro/: Cargo.toml
crates/bevy_flurx_ipc_macro/src/: command.rs  lib.rs
crates/bevy_flurx_ipc_macro/src/command/: action_command.rs  async_command.rs
crates/bevy_webview_core/: CHANGELOG.md  Cargo.toml
crates/bevy_webview_core/src/: bundle.rs  lib.rs
crates/bevy_webview_core/src/bundle/: embedding.rs  webview.rs
crates/bevy_webview_core/src/bundle/embedding/: bounds.rs  grip_zone.rs
crates/bevy_webview_core/src/bundle/webview/: auto_play.rs  background.rs  browser_accelerator_keys.rs  csp.rs  enable_clipboard.rs  focused.rs  handler.rs  hotkeys_zoom.rs  initialization_script.rs  is_open_devtools.rs  theme.rs  use_devtools.rs  user_agent.rs  visible.rs  webview_uri.rs
crates/bevy_webview_core/src/bundle/webview/handler/: on_download.rs  on_dragdrop.rs  on_navigation.rs  on_new_window_request.rs
crates/bevy_webview_wry/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/bevy_webview_wry/examples/: child_window.rs  embedding.rs  embedding_html.rs  emit_event_to_webview.rs  ipc_command.rs  ipc_trigger.rs  simple.rs
crates/bevy_webview_wry/src/: embedding.rs  lib.rs  util.rs  webview.rs
crates/bevy_webview_wry/src/embedding/: grip_zone.rs  resize.rs
crates/bevy_webview_wry/src/webview/: devtools.rs  emit_webview_event.rs  handlers.rs  ipc_resolve.rs  linux.rs  load_webview.rs  protocol.rs
crates/bevy_webview_wry/src/webview/handlers/: download.rs  dragdrop.rs  new_window_request.rs  page_load.rs
crates/bevy_webview_wry/src/webview/load_webview/: ipc.rs  protocol.rs
crates/bevy_webview_wry/src/webview/protocol/: asset.rs
examples/ipc/: simple.rs
examples/wry/: Cargo.toml  child_window.rs  event_emit.rs  event_listen.rs  ipc_command.rs  ipc_trigger.rs  send_webview.rs
