[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "tool",
]

[workspace.package]
version = "0.4.0"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/bevy_webview_projects"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
bevy_flurx = { version = "0.11" }
bevy_flurx_ipc = { path = "crates/bevy_flurx_ipc", version = "0.3" }
bevy_flurx_ipc_macro = { path = "crates/bevy_flurx_ipc_macro", version = "0.3" }
bevy_webview_core = { path = "crates/bevy_webview_core", version = "0.3" }
bevy_webview_wry = { path = "crates/bevy_webview_wry", version = "0.3" }
bevy_flurx_api = { path = "crates/bevy_flurx_api", version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
missing_docs = "warn"


