[package]
name = "bevy_flurx_api"
description = "Provides the api plugins for bevy_webview_wry"
categories = ["game-development"]
readme = "README.md"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = []
fs = ["dep:dirs"]
clipboard = ["dep:arboard"]
dialog = ["dep:rfd", "fs"]
notification = ["dep:notify-rust"]
os = ["dep:sysinfo", "dep:sys-locale"]
monitor = []
web_window = ["dep:winit"]
http = ["bevy_flurx/tokio", "bevy_flurx/effect", "dep:reqwest"]
full = [
    "fs",
    "clipboard",
    "dialog",
    "notification",
    "os",
    "monitor",
    "web_window",
    "http",
]

[dependencies]
bevy = { workspace = true }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { workspace = true }
bevy_webview_core = { workspace = true }
serde = { workspace = true }
dirs = { version = "6", optional = true }
arboard = { version = "3", optional = true }
rfd = { version = "0.15", default-features = false, optional = true }
notify-rust = { version = "4", optional = true }
sysinfo = { version = "0.33", optional = true }
sys-locale = { version = "0.3", optional = true }
winit = { version = "0.30", features = ["serde"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
bevy = "0.15"
bevy_webview_wry = { path = "../bevy_webview_wry" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

