[package]
name = "bevy_flurx_ipc"
description = "provides a way for ipc communication using bevy_flurx"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc", "async"]
readme = "README.md"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[test]]
name = "progress"
path = "tests/index.rs"

[dependencies]
bevy = { workspace = true, features = ["serialize", "bevy_log"] }
bevy_flurx_ipc_macro = { workspace = true }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = "1"
bevy = { workspace = true }
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper", branch = "v0.16" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]