[package]
name = "bevy_flurx_ipc_macro"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc"]
description = "provide ipc-command macro for bevy_flurx_ipc"
readme = "../bevy_webview_wry/README.md"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
darling = { version = "0.20" }
bevy = { version = "0.15", default-features = false, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
bevy = { version = "0.15", default-features = false }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { workspace = true }
serde = { workspace = true }

[features]
default = []
doc = ["dep:bevy", "dep:serde"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]