[package]
name = "bevy_webview_core"
description = "Provides webview's core logic for bevy_webview_projects"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
readme = "../../README.MD"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_flurx_ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bevy_webview_wry = { path = "../bevy_webview_wry" }

[lints]
workspace = true
