[package]
name = "bevy_webview_wry"
description = "Allows you to create a webview based on wry"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
readme = "README.md"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["child_window", "api", "hot-reload"]
child_window = ["dep:bevy_child_window"]
api = ["dep:bevy_flurx_api"]
hot-reload = ["bevy/file_watcher"]

[dependencies]
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_asset",
    "bevy_color",
    "serialize",
] }
bevy_webview_core = { workspace = true }
bevy_flurx_ipc = { workspace = true }
bevy_flurx_api = { workspace = true, optional = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.9"
bevy_child_window = { version = "0.2", optional = true }
wry = { version = "0.52", features = ["transparent", "linux-body"] }

[target.'cfg(any(target_os="ios", target_os="macos"))'.dependencies]
objc2 = { version = "0.6" }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSPanel",
    "NSResponder",
] }
objc2-foundation = { version = "0.3" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gtk = { version = "0.18" }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[dev-dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy_flurx = "0.11"
bevy_flurx_ipc = { path = "../bevy_flurx_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]